	  Pidgin and libpurple APIs.  Cleaned up some preferences as well.
	* Dice plugin now supports dice notation
	  (http://en.wikipedia.org/wiki/Dice_notation), but it's not perfect yet.
	  (Lucas Paul)
	* Dice plugin now calls the /me command with its output.
	* Napster plugin now builds by default.
	* Removed the broadcast plugin.
	* Memory leak fixes

Version 2.2.0: 10/25/07
	* Added 'menuconfig' script to make it easier to select what plugins to
	  build.
	* Added support for initial setting/unsetting of user modes to irc-more
	* Added the abusive findip plugin
	* Added infopane plugin
	* Added dewysiwygification plugin
	* Added timelog plugin, from Jon Oberheide's gaim-timelog
	* Fixed autoreply so it doesn't reply with an empty message (rageboy04)
	* Fixed a crash in ignore where a nickname that is not all lowercase
	  causes unintended behavior resulting in a crash (rageboy04, qwert)
	* Fixed a possible double-free crash in /notice support in irc-more.
	* Fixed a crash in Slashexec that has only shown itself when using the
	  Offline Message Emulation plugin to emulate an offline message at the
	  same time as Slashexec is loaded.
	* Fixed the version number for highlight and ignore so they show the
	  correct Plugin Pack version instead of the version of Pidgin they were
	  built against.
	* Fixed building with ancient glib. (Bodo Bellut)
	* Removed the .build file from hideconv to remove it from default
	  builds.  Pidgin will have persistent conversations soon.
	* Partially merged buddytimezone from the buddytools package into the
	  existing (incomplete) buddytime plugin
	* Autoreply now can be disabled per-account (rageboy04)
	* Listhandler now supports restoring a buddy list from a backed-up
	  blist.xml file created by backing up ~/.purple.
	* Merged autorejoin into irc-more.  No prefs migration will take place.
	  You will need to reconfigure the delay yourself.  Autorejoin no longer
	  exists.